[workspace]
members = ["node", "router", "scripts"]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.0.0", features = ["full"] }
anyhow = "1.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1"
axum = "0.7"
bn254 = { git = "https://github.com/BreadchainCoop/bn254.git" }
bytes = "1.10.1"
clap = "4.5.37"
commonware-codec = "0.0.62"
commonware-cryptography = "0.0.62"
commonware-eigenlayer = { git = "https://github.com/BreadchainCoop/commonware-avs-network-lookup" }
commonware-macros = "0.0.62"
commonware-p2p = "0.0.62"
commonware-runtime = "0.0.62"
commonware-utils = "0.0.62"
dotenv = "0.15.0"
eigen-crypto-bls = "2.0.0"
eigen-crypto-bn254 = "2.0.0"
eigen-logging = "1.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
gas-analyzer-rs = { git = "https://github.com/BreadchainCoop/gas-killer-analyzer", branch = "main" }
gas-killer-router = { path = "router" }
governor = "0.6.3"
hex = "0.4"
num-bigint = "0.4"
prometheus-client = "0.23.1"
prost = "0.13.5"
prost-build = "0.13.5"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
