[workspace]
resolver = "2"
members = ["common", "node", "router", "scripts"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "PPL"

[workspace.dependencies]
alloy = "1.0"
alloy-eips = "1.0"
alloy-network = "1.0"
alloy-primitives = "1.0"
alloy-provider = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.0"
anyhow = "1.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1"
axum = "0.7"
bn254 = { git = "https://github.com/BreadchainCoop/bn254.git" }
bytes = "1.10.1"
clap = "4.5.37"
commonware-avs-bindings = { git = "https://github.com/BreadchainCoop/commonware-restaking" }
commonware-avs-core = { git = "https://github.com/BreadchainCoop/commonware-restaking" }
commonware-avs-node = { git = "https://github.com/BreadchainCoop/commonware-restaking" }
commonware-avs-router = { git = "https://github.com/BreadchainCoop/commonware-restaking" }
commonware-avs-usecases = { git = "https://github.com/BreadchainCoop/commonware-restaking" }
commonware-codec = "0.0.63"
commonware-cryptography = "0.0.63"
commonware-macros = "0.0.63"
commonware-p2p = "0.0.63"
commonware-runtime = "0.0.63"
commonware-utils = "0.0.63"
dotenv = "0.15.0"
eigen-client-avsregistry = "2.0.0"
eigen-common = "2.0.0"
eigen-crypto-bls = "2.0.0"
eigen-crypto-bn254 = "2.0.0"
eigen-logging = "0.1.3"
eigen-services-operatorsinfo = "2.0.0"
eigen-utils = "2.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
gas-analyzer-rs = { git = "https://github.com/BreadchainCoop/gas-killer-analyzer", package = "gas-analyzer-evmsketch" }
gas-killer-common = { path = "common" }
governor = "0.6.3"
hex = "0.4"
num-bigint = "0.4"
prometheus-client = "0.23.1"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
