[package]
name = "gas-killer-common"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-avs-router = { workspace = true }
commonware-avs-usecases = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
dotenv = { workspace = true }
gas-analyzer-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
