[package]
name = "gas-killer-common"
version.workspace = true
edition.workspace = true

[dependencies]
# Ethereum / Alloy (for bindings)
alloy = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }

# Serialization
anyhow = { workspace = true }

# Async
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Cryptography (vendored BN254 scheme)
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
eigen-client-avsregistry = { workspace = true }
eigen-common = { workspace = true }
eigen-crypto-bls = { workspace = true }
eigen-crypto-bn254 = { workspace = true }
eigen-logging = { workspace = true }
eigen-services-operatorsinfo = { workspace = true }
eigen-utils = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = "2"

# Commonware
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-math = { workspace = true }
commonware-parallel = { workspace = true }
commonware-utils = { workspace = true }

# Config
dotenv = { workspace = true }

# Gas analysis
gas-analyzer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
url = { workspace = true }

# Metrics
prometheus-client = { workspace = true }
