[package]
name = "gas-killer-node"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bn254 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-eigenlayer = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
dotenv = { workspace = true }
eigen-crypto-bls = { workspace = true }
eigen-crypto-bn254 = { workspace = true }
eigen-logging = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gas-killer-router = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
