[package]
name = "avs-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy_array_summation"
path = "deploy_array_summation.rs"

[[bin]]
name = "trigger_gas_killer"
path = "trigger_gas_killer.rs"

[lib]
name = "bindings"
path = "bindings/mod.rs"

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
commonware-eigenlayer = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gas-killer-router = { workspace = true }
reqwest = { workspace = true }
gas-analyzer-rs = { workspace = true }
