[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[lib]
name = "bindings"
path = "bindings/mod.rs"

[[bin]]
name = "deploy_array_summation"
path = "deploy_array_summation.rs"

[[bin]]
name = "trigger_gas_killer"
path = "trigger_gas_killer.rs"

[[bin]]
name = "run_scenario"
path = "run_scenario.rs"

[dependencies]
alloy = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
commonware-avs-core = { workspace = true }
dotenv = { workspace = true }
gas-analyzer = { workspace = true }
gas-killer-common = { workspace = true }
gas-killer-router = { path = "../router" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
